# billee_bot

./: CMakeLists.txt  README.md  package.xml
!extra_xacro_files/: Total Assembly URDF and meshes.csv  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro
config/: depth_camera.rviz  drive_bot.rviz  joint_names_Total Assembly URDF and meshes.yaml  mapper_params_online_async.yaml  slam_bot.rviz  view_bot.rviz
description/: depth_camera.xacro  full_robot.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_description.xacro  robot_values.xacro  urdf_arm.xacro  urdf_rover.xacro
install/: local_setup.sh  setup.sh
install/billee_bot/share/billee_bot/: local_setup.bash  local_setup.dsv  (+8 more)
launch/: launch_sim.launch.py  rsp.launch.py
log/: latest_build
meshes/: Lback_pvc.STL  Lback_star.STL  Lbackmotor.STL  Lbackwheel.STL  Lfront_motor.STL  Lfront_pvc.STL  Lfront_star.STL  Lfront_wheel.STL  Lmid_star.STL  Lmidmotor.STL  Lmidwheel.STL  Rback_pvc.STL  Rback_star.STL  Rbackmotor.STL  Rbackwheel.STL  Rfront_motor.STL  Rfront_pvc.STL  Rfront_star.STL  Rfront_wheel.STL  Rmid_star.STL  Rmidmotor.STL  Rmidwheel.STL  back_wheel_left.STL  back_wheel_right.STL  differentialbar.STL  front_wheel_left.STL  front_wheel_right.STL  left_angledhinge.STL  left_angledhinge2.STL  left_joint1.STL  left_moment.STL  mid_wheel_left.STL  mid_wheel_right.STL  moment_left.STL  moment_right.STL  right_angledhinge.STL  right_angledhinge2.STL  right_joint1.STL  right_moment.STL  suspension.STL  (+6 more)
worlds/: cone_obstacles.world  obstacles.world
(+24 files in other folders)
